{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 21,
  "lineage": "a035bd86-c7b4-080c-529a-94ef2ff2b347",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": null,
            "description": null,
            "fingerprint": null,
            "id": "projects/<unique-gcp-project-id>/global/securityPolicies/mage-data-prep-security-policy",
            "name": "mage-data-prep-security-policy",
            "project": null,
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Whitelist IP",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "119.235.221.13/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 100,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "default rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": null,
            "timeouts": null,
            "type": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.149.168.30",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-02-29T11:44:20.477-08:00",
            "id": "projects/<unique-gcp-project-id>//global/addresses/mage-data-prep-urlmap-address",
            "label_fingerprint": "tjR8I27v5HY=",
            "labels": {
              "example-label": "cloud-run-example"
            },
            "name": "mage-data-prep-urlmap-address",
            "prefix_length": 0,
            "project": "<unique-gcp-project-id>/",
            "self_link": "https://www.googleapis.com/compute/v1/projects/<unique-gcp-project-id>//global/addresses/mage-data-prep-urlmap-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}